--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "description": "",
   "license": "ISC",
   "author": "Richard Gomes",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
